--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -14,5 +14,6 @@ name = "macpack"
 anyhow = "1.0.98"
 clap = { version = "4.5.38", features = ["derive"] }
 serde = { version = "1.0.219", features = ["derive"] }
-serde_json = "1.0.140"
-
+tempfile = "3.21.0"
+toml = "0.9.5"
+zip = "5.0.0"
